--- a/index.html
+++ b/index.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Link-Bio</title>
     <script type="text/javascript" src="./index.js" defer=""></script>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./index.css" />
   </head>
 
   <body>
-
     <div class="box-redes">
-      <img src="https://d1fdloi71mui9q.cloudfront.net/9IP0r3qnTw2fSXTlo4Xv_14VQRt4SLd33YQiA" alt="mallogado">
+      <img
+        src="https://d1fdloi71mui9q.cloudfront.net/9IP0r3qnTw2fSXTlo4Xv_14VQRt4SLd33YQiA"
+        alt="mallogado"
+      />
       <h1>Giuliano Gomes</h1>
       <p>Lei Da atração</p>
       <ul>
-        <li><a href="https://www.instagram.com/giuliano.s.gomes/" target="_blank">Instagram</a></li>
-        <li><a href="https://www.facebook.com/giulianogomes.business" target="_blank">Facebook</a></li>
-        <li><a href="https://www.youtube.com/channel/UCBhWWrfmiAYdUP0A4gqRHnQ/featured" target="_blank">Youtube</a></li>
-        <li><a href="https://www.tiktok.com/@giuliano.gomes" target="_blank">TikTok</a></li>
+        <li>
+          <a href="https://www.instagram.com/giuliano.s.gomes/" target="_blank"
+            >Instagram</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.facebook.com/giulianogomes.business"
+            target="_blank"
+            >Facebook</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.youtube.com/channel/UCBhWWrfmiAYdUP0A4gqRHnQ/featured"
+            target="_blank"
+            >Youtube</a
+          >
+        </li>
+        <li>
+          <a href="https://www.tiktok.com/@giuliano.gomes" target="_blank"
+            >TikTok</a
+          >
+        </li>
       </ul>
     </div>
-    <footer class="rodape">Feito com amor por <a class="rodape" href="https://twitch.tv/bellguitar" target="_blank">©bellguitar</a></footer>
-
-
+    <footer class="rodape">
+      Feito com amor por
+      <a class="rodape" href="https://twitch.tv/bellguitar" target="_blank"
+        >©bellguitar</a
+      >
+    </footer>
   </body>
-
 </html>
