--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 
   <body>
     <div class="box-redes">
+      <!--Imagem perfil usuário. Imagem aplicada via link(Você pode fazer o mesmo)-->
       <img
         src="https://d1fdloi71mui9q.cloudfront.net/9IP0r3qnTw2fSXTlo4Xv_14VQRt4SLd33YQiA"
         alt="mallogado"
       />
       <h1>Giuliano Gomes</h1>
       <p>Lei Da atração</p>
+      <!--Box redes sociais-->
       <ul>
         <li>
           <a href="https://www.instagram.com/giuliano.s.gomes/" target="_blank"
